--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -888,6 +888,9 @@ h6 {
     }
 }
 
+.nav {
+    background-color: #e97102;
+}
 
 /* Author Archives
 /* ---------------------------------------------------------- */
